Source/bmalloc/libpas/src/libpas/pas_enumerate_large_heaps.c
@@ -42,14 +42,13 @@ static bool range_list_iterate_add_large_payload_callback(pas_enumerator* enumer
 
     payloads = arg;
 
-    PAS_ASSERT(!pas_range_is_empty(range));
+    PAS_ASSERT_WITH_DETAIL(!pas_range_is_empty(range));
 
     pas_range_begin_min_heap_add(payloads, range, &enumerator->allocation_config);
     return true;
 }
 
-static void record_span(pas_enumerator* enumerator,
-                        pas_range range)
+static PAS_NEVER_INLINE void record_span(pas_enumerator* enumerator, pas_range range)
 {
     static const bool verbose = false;
     if (verbose)
@@ -61,7 +60,7 @@ static void record_span(pas_enumerator* enumerator,
 static bool large_map_hashtable_entry_callback(
     pas_enumerator* enumerator, pas_large_map_entry* entry, void* arg)
 {
-    PAS_ASSERT(!arg);
+    PAS_ASSERT_WITH_DETAIL(!arg);
     
     pas_enumerator_record(
         enumerator, (void*)entry->begin, entry->end - entry->begin, pas_enumerator_object_record);
@@ -75,7 +74,7 @@ static bool small_large_map_hashtable_entry_callback(
     uintptr_t begin;
     uintptr_t end;
     
-    PAS_ASSERT(!arg);
+    PAS_ASSERT_WITH_DETAIL(!arg);
 
     begin = pas_small_large_map_entry_begin(*entry);
     end = pas_small_large_map_entry_end(*entry);
@@ -104,12 +103,42 @@ static bool tiny_large_map_second_level_hashtable_entry_callback(
 static bool tiny_large_map_hashtable_entry_callback(
     pas_enumerator* enumerator, pas_first_level_tiny_large_map_entry* entry, void* arg)
 {
-    PAS_ASSERT(!arg);
+    PAS_ASSERT_WITH_DETAIL(!arg);
     
     return pas_tiny_large_map_second_level_hashtable_for_each_entry_remote(
         enumerator, entry->hashtable,
         enumerator->root->tiny_large_map_second_level_hashtable_in_flux_stash_instance,
         tiny_large_map_second_level_hashtable_entry_callback, (void*)entry->base);
+}
+
+static PAS_NEVER_INLINE bool enumerate_large_map(pas_enumerator* enumerator)
+{
+    return pas_large_map_hashtable_for_each_entry_remote(
+        enumerator,
+        enumerator->root->large_map_hashtable_instance,
+        enumerator->root->large_map_hashtable_instance_in_flux_stash,
+        large_map_hashtable_entry_callback,
+        NULL);
+}
+
+static PAS_NEVER_INLINE bool enumerate_small_large_map(pas_enumerator* enumerator)
+{
+    return pas_small_large_map_hashtable_for_each_entry_remote(
+        enumerator,
+        enumerator->root->small_large_map_hashtable_instance,
+        enumerator->root->small_large_map_hashtable_instance_in_flux_stash,
+        small_large_map_hashtable_entry_callback,
+        NULL);
+}
+
+static PAS_NEVER_INLINE bool enumerate_tiny_large_map(pas_enumerator* enumerator)
+{
+    return pas_tiny_large_map_hashtable_for_each_entry_remote(
+        enumerator,
+        enumerator->root->tiny_large_map_hashtable_instance,
+        enumerator->root->tiny_large_map_hashtable_instance_in_flux_stash,
+        tiny_large_map_hashtable_entry_callback,
+        NULL);
 }
 
 bool pas_enumerate_large_heaps(pas_enumerator* enumerator)
@@ -137,7 +166,7 @@ bool pas_enumerate_large_heaps(pas_enumerator* enumerator)
         uintptr_t page;
 
         for (page = range.begin; page < range.end; page += enumerator->root->page_malloc_alignment) {
-            PAS_ASSERT(page);
+            PAS_ASSERT_WITH_DETAIL(page);
 
             if (verbose)
                 pas_log("Looking at page %p\n", (void*)page);
@@ -158,28 +187,13 @@ bool pas_enumerate_large_heaps(pas_enumerator* enumerator)
     record_span(enumerator, span);
 
     if (enumerator->record_object) {
-        if (!pas_large_map_hashtable_for_each_entry_remote(
-                enumerator,
-                enumerator->root->large_map_hashtable_instance,
-                enumerator->root->large_map_hashtable_instance_in_flux_stash,
-                large_map_hashtable_entry_callback,
-                NULL))
+        if (!enumerate_large_map(enumerator))
             return false;
-        
-        if (!pas_small_large_map_hashtable_for_each_entry_remote(
-                enumerator,
-                enumerator->root->small_large_map_hashtable_instance,
-                enumerator->root->small_large_map_hashtable_instance_in_flux_stash,
-                small_large_map_hashtable_entry_callback,
-                NULL))
+
+        if (!enumerate_small_large_map(enumerator))
             return false;
-        
-        if (!pas_tiny_large_map_hashtable_for_each_entry_remote(
-                enumerator,
-                enumerator->root->tiny_large_map_hashtable_instance,
-                enumerator->root->tiny_large_map_hashtable_instance_in_flux_stash,
-                tiny_large_map_hashtable_entry_callback,
-                NULL))
+
+        if (!enumerate_tiny_large_map(enumerator))
             return false;
     }
 
